@@ -5,12 +5,12 @@ plugins {
 // Change the values below this to your mods values
 // To change the project name, edit the settings.gradle file
 
-project.ext.modID = "bolo.bettertorch" // The unique id of your mod. Must be all lowercase and cannot use special characters.
-project.ext.modName = "A Better Torch" // The display name of your mod.
-project.ext.modVersion = "1.2.1" // Your current builds version. Must follow the xx.xx... format.
-project.ext.gameVersion = "0.33.1" // The target game version.
-project.ext.modDescription = "A simple stronger torch, 2x the light of the vanilla one." // Short description of what your mod is.
-project.ext.author = "Bolo" // Your name
+project.ext.modID = "xeraphire.lighting" // The unique id of your mod. Must be all lowercase and cannot use special characters.
+project.ext.modName = "Let there be Light!" // The display name of your mod.
+project.ext.modVersion = "1.0.0" // Your current builds version. Must follow the xx.xx... format.
+project.ext.gameVersion = "1.3.3" // The target game version.
+project.ext.modDescription = "Enhanced torches and decorative outdoor lighting fixtures with superior illumination and full wiring support." // Short description of what your mod is.
+project.ext.author = "Xeraphire" // Your name
 
 /**
  * When setting clientside to true, it means servers do not need this mod for clients to connect and vice versa.
@@ -24,11 +24,12 @@ project.ext.clientside = false
  * Dependencies define the default load order of mods
  * Uncomment and configure these if your mod has dependencies
  */
-//project.ext.modDependencies = ["other.modid1", "other.modid2"]
-//project.ext.modOptionalDependencies = ["optional.modid1", "optional.modid2"]
+project.ext.modOptionalDependencies = ["autotorch"]
 
 // The path to the games install directory
-def gameDirectory = "D:/Steam/steamapps/common/Necesse"
+def gameDirectory = file("/Users/dika/Library/Application Support/Steam/steamapps/common/Necesse/Necesse.app/Contents/Resources").exists() ?
+        "/Users/dika/Library/Application Support/Steam/steamapps/common/Necesse/Necesse.app/Contents/Resources" :
+        "D:/Steam/steamapps/common/Necesse"
 
 // =================================================
 // ========== DO NOT EDIT BELOW THIS LINE ==========
@@ -40,8 +41,10 @@ def jarName = "${project.ext.modName.replace(" ", "")}-${project.ext.gameVersion
 group project.ext.modID
 version project.ext.modVersion
 
-setSourceCompatibility(JavaVersion.VERSION_1_8)
-setTargetCompatibility(JavaVersion.VERSION_1_8)
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
 
 repositories {
     mavenCentral()
@@ -51,8 +54,8 @@ configurations {
     libDepends
 }
 
-sourceSets.main.output.resourcesDir = file("build/mod/resources/")
-sourceSets.main.java.outputDir = file("build/mod/")
+sourceSets.main.resources.destinationDirectory.set(file("build/mod/resources/"))
+sourceSets.main.java.destinationDirectory.set(file("build/mod/"))
 sourceSets.main.compileClasspath += configurations.libDepends // Adds libDepends configuration to classpath
 def buildLocation = "build/jar/"
 
@@ -71,6 +74,19 @@ dependencies {
     // These are some examples:
 //    libDepends group: 'com.google.guava', name: 'guava', version: '31.1-jre'
 //    libDepends files("path/to/library/jar.jar")
+
+    // Test dependencies
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
+    testImplementation 'org.assertj:assertj-core:3.25.3'
+    testImplementation 'org.mockito:mockito-core:5.11.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+
+tasks.withType(Test).configureEach {
+    useJUnitPlatform()
+    jvmArgs "-XX:+EnableDynamicAgentLoading"
 }
 
 task createAppID {
@@ -88,8 +104,8 @@ task createModInfoFile(type: JavaExec) {
 
     classpath = files(gameDirectory + "/Necesse.jar")
 
-    main = "CreateModInfoFile"
-    args "-file", "${sourceSets.main.java.outputDir}/mod.info",
+    mainClass = "CreateModInfoFile"
+    args "-file", "build/mod/mod.info",
             "-id", "${project.ext.modID}",
             "-name", "${project.ext.modName}",
             "-version", "${project.ext.modVersion}",
@@ -110,7 +126,7 @@ task runClient(type: JavaExec) {
 
     classpath = files(gameDirectory + "/Necesse.jar")
 
-    main = "StartSteamClient"
+    mainClass = "StartSteamClient"
     jvmArgs "-Xms512m", "-Xmx4G", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseG1GC", "-XX:G1NewSizePercent=20", "-XX:G1ReservePercent=20", "-XX:MaxGCPauseMillis=50", "-XX:G1HeapRegionSize=32M"
     args "-dev", "-mod \"${buildLocation}\""
 }
@@ -122,7 +138,7 @@ task runDevClient(type: JavaExec) {
 
     classpath = files(gameDirectory + "/Necesse.jar")
 
-    main = "StartSteamClient"
+    mainClass = "StartSteamClient"
     jvmArgs "-Xms512m", "-Xmx4G", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseG1GC", "-XX:G1NewSizePercent=20", "-XX:G1ReservePercent=20", "-XX:MaxGCPauseMillis=50", "-XX:G1HeapRegionSize=32M"
     args "-dev 1", "-mod \"${buildLocation}\""
 }
@@ -134,7 +150,7 @@ task runServer(type: JavaExec) {
 
     classpath = files(gameDirectory + "/Server.jar")
 
-    main = "StartDesktopServer"
+    mainClass = "StartDesktopServer"
     jvmArgs "-Xms512m", "-Xmx4G", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseG1GC", "-XX:G1NewSizePercent=20", "-XX:G1ReservePercent=20", "-XX:MaxGCPauseMillis=50", "-XX:G1HeapRegionSize=32M"
     args "-mod \"${buildLocation}\""
 }
@@ -142,7 +158,7 @@ task runServer(type: JavaExec) {
 task buildModJar(type: Jar) {
     group "necesse"
     description "Generates the mod jar into the build folder"
-    dependsOn "classes"
+    dependsOn "classes", "processResources"
 
     doFirst {
         fileTree(dir: buildLocation).exclude("${jarName}.jar").visit { FileVisitDetails details ->
@@ -150,11 +166,21 @@ task buildModJar(type: Jar) {
         }
     }
 
-    // Add mod output
-    from sourceSets.main.java.outputDir
+    // Add mod classes and mod.info
+    from "build/mod/"
+    from "src/main/resources/preview.png"
+
+    // Add mod game resources under resources/ folder
+    into("resources") {
+        from "src/main/resources"
+    }
+
     // Add the dependencies
     from configurations.libDepends.collect { it.isDirectory() ? it : zipTree(it) }
 
-    archiveName "${jarName}.jar"
-    destinationDir file(buildLocation)
+    archiveFileName = "${jarName}.jar"
+    destinationDirectory.set(file(buildLocation))
 }
+
+jar.dependsOn("buildModJar")
+assemble.dependsOn("buildModJar")
